Add initial boot procedure for a node